nobase_include_HEADERS = fst/arc.h fst/determinize.h fst/intersect.h \
fst/queue.h fst/statesort.h fst/arcfilter.h fst/dfs-visit.h \
fst/invert.h fst/randequivalent.h fst/string-weight.h fst/arcmerge.h \
fst/difference.h fst/lexicographic-weight.h fst/randgen.h \
fst/symbol-table.h fst/arcsort.h fst/encode.h fst/lock.h \
fst/random-weight.h fst/synchronize.h fst/arcsum.h \
fst/epsnormalize.h fst/log.h fst/rational.h fst/test-properties.h \
fst/cache.h fst/equal.h fst/map.h fst/register.h fst/topsort.h \
fst/closure.h fst/equivalent.h fst/matcher.h fst/relabel.h \
fst/union-find.h fst/compact-fst.h fst/expanded-fst.h fst/minimize.h \
fst/replace.h fst/union.h fst/compat.h fst/factor-weight.h \
fst/mutable-fst.h fst/reverse.h fst/util.h fst/complement.h \
fst/flags.h fst/partition.h fst/reweight.h fst/vector-fst.h \
fst/compose-filter.h fst/float-weight.h fst/product-weight.h \
fst/rmepsilon.h fst/verify.h fst/compose.h fst/fst-decl.h \
fst/project.h fst/rmfinalepsilon.h fst/visit.h fst/concat.h \
fst/fst.h fst/properties.h fst/shortest-distance.h fst/weight.h \
fst/connect.h fst/fstlib.h fst/prune.h fst/shortest-path.h \
fst/const-fst.h fst/heap.h fst/push.h fst/state-table.h \
fst/main.h fst/mains.h fst/text-io.h fst/slist.h \
fst/pair-weight.h
