if HAVE_COMPACT
compactdir = compact
endif

if HAVE_COMPRESS
compressdir = compress
endif

if HAVE_CONST
constdir = const
endif

if HAVE_FAR
fardir = far
endif

if HAVE_LINEAR
lineardir = linear
endif

if HAVE_LOOKAHEAD
lookaheaddir = lookahead
endif

if HAVE_MPDT
mpdtdir = mpdt
endif

if HAVE_NGRAM
ngramdir = ngram
endif

if HAVE_PYTHON
pywrapfstdir = python
endif

if HAVE_PDT
pdtdir = pdt
endif

SUBDIRS = $(compactdir) $(compressdir) $(constdir) $(fardir) \
          $(lineardir) $(lookaheaddir) $(mpdtdir) $(ngramdir) $(pdtdir) \
				  $(pywrapfstdir)
